# brave-core

./: .gitignore  DEPS  brave_paks.gni  package-lock.json  package.json
app/: brave_command_ids.h  brave_generated_resources.grd  brave_main_delegate.cc  brave_strings.grd  generated_resources.grd  settings_strings.grdp
app/resources/: chromium_strings_bn.xtb  chromium_strings_ca.xtb  chromium_strings_en-GB.xtb  generated_resources_am.xtb  generated_resources_ar.xtb  generated_resources_bg.xtb  generated_resources_bn.xtb  generated_resources_ca.xtb  generated_resources_cs.xtb  (+46 more)
browser/: BUILD.gn  brave_browser_process_impl.cc  brave_browser_process_impl.h  brave_content_browser_client.cc  brave_content_browser_client.h  brave_content_browser_client_browsertest.cc  brave_local_state_prefs.cc  brave_profile_prefs.cc  brave_stats_updater.cc  brave_stats_updater_params.cc  brave_stats_updater_params.h  browser_context_keyed_service_factories.cc
browser/extensions/: BUILD.gn  brave_component_extension_resource_manager.cc  brave_component_loader.cc  brave_extension_provider.cc
browser/extensions/api/: binance_api.cc  binance_api.h
browser/extensions/api/brave_sync/: brave_sync_api.cc  brave_sync_api.h
browser/extensions/api/settings_private/: brave_prefs_util.cc
common/: network_constants.cc  network_constants.h  pref_names.cc  pref_names.h  webui_url_constants.cc  webui_url_constants.h
components/resources/: BUILD.gn  brave_components_resources.grd  brave_components_strings.grd
patches/: chrome-VERSION.patch  chrome-app-BUILD.gn.patch  chrome-browser-BUILD.gn.patch  chrome-browser-chrome_content_browser_manifest_overlay.json.patch  chrome-browser-content_settings-tab_specific_content_settings.cc.patch  chrome-browser-extensions-api-settings_private-prefs_util.cc.patch  chrome-browser-extensions-component_extensions_whitelist-whitelist.cc.patch  chrome-browser-profiles-profile.cc.patch  chrome-browser-profiles-profile.h.patch  chrome-browser-profiles-profile_io_data.cc.patch  chrome-browser-profiles-profile_manager.cc.patch  chrome-browser-profiles-profile_manager.h.patch  chrome-browser-profiles-profiles_state.cc.patch  chrome-browser-resources-settings-people_page-people_page.html.patch  chrome-browser-ui-BUILD.gn.patch  chrome-browser-ui-browser_command_controller.cc.patch  chrome-browser-ui-views-location_bar-location_bar_view.h.patch  chrome-browser-ui-views-profiles-avatar_toolbar_button.cc.patch  chrome-browser-ui-views-profiles-profile_chooser_view.cc.patch  chrome-browser-ui-views-profiles-profile_chooser_view.h.patch  chrome-browser-ui-webui-chrome_web_ui_controller_factory.cc.patch  chrome-browser-ui-webui-settings-md_settings_localized_strings_provider.cc.patch  chrome-browser-ui-webui-settings-md_settings_ui.cc.patch  chrome-common-pref_names.cc.patch  chrome-common-pref_names.h.patch  chrome-test-BUILD.gn.patch  content-browser-frame_host-navigation_request.cc.patch  extensions-browser-extension_event_histogram_value.h.patch
renderer/: brave_content_settings_observer.cc
test/: BUILD.gn
utility/: BUILD.gn
(+95 files in other folders)
