import("//build/config/features.gni")

source_set("extensions") {
  sources = [
    "api/brave_shields_api.cc",
    "api/brave_shields_api.h",
    "api/content_settings/brave_content_settings_store.cc",
    "api/content_settings/brave_content_settings_store.h",
    "api/brave_sync/brave_sync_api.cc",
    "api/brave_sync/brave_sync_api.h",
    "api/brave_sync/brave_sync_event_router.cc",
    "api/brave_sync/brave_sync_event_router.h",
    "brave_component_extension_resource_manager.cc",
    "brave_component_extension_resource_manager.h",
    "brave_component_loader.cc",
    "brave_component_loader.h",
    "brave_extension_management.cc",
    "brave_extension_management.h",
    "brave_extension_provider.cc",
    "brave_extension_provider.h",
  ]

  deps = [
    "//brave/browser/resources:brave_extension_grit",
    "//chrome/browser",
    "//content/public/browser",
    "//extensions/browser",
  ]
}
